Fix Input/Column Alignment
Closes #4

--- a/app/assets/stylesheets/loot.scss
+++ b/app/assets/stylesheets/loot.scss
@@ -12,6 +12,10 @@ body {
     margin-right: 10px;
 }
 
+.form-table {
+    margin-left: -13px;
+}
+
 .card {
     margin-top: 20px;
 }
